app app app app app appppppppp

--- a/index.html
+++ b/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./src/assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="./src/style/reset.css">
+    <script defer src="/node_modules\@fortawesome\fontawesome-free\js/brands.js"></script>
+    <script defer src="/node_modules\@fortawesome\fontawesome-free\js/solid.js"></script>
+    <script defer src="/node_modules\@fortawesome\fontawesome-free\js/fontawesome.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <title>vuetest2</title>
   </head>
   <body>
+    <style>
+      html, body, div, span, applet, object, iframe,
+      h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+      a, abbr, acronym, address, big, cite, code,
+      del, dfn, em, img, ins, kbd, q, s, samp,
+      small, strike, strong, sub, sup, tt, var,
+      b, u, i, center,
+      dl, dt, dd, ol, ul, li,
+      fieldset, form, label, legend,
+      table, caption, tbody, tfoot, thead, tr, th, td,
+      article, aside, canvas, details, embed, 
+      figure, figcaption, footer, header, hgroup, 
+      menu, nav, output, ruby, section, summary,
+      time, mark, audio, video {font-family: 'Noto Sans KR', sans-serif;}
+      .clear:after {
+        display: block;
+        clear: both;
+        content:'';
+      }
+    </style>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
   </body>
