--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       article, aside, canvas, details, embed, 
       figure, figcaption, footer, header, hgroup, 
       menu, nav, output, ruby, section, summary,
-      time, mark, audio, video {font-family: 'Noto Sans KR', sans-serif;}
+      time, mark, audio, video, button {font-family: 'Noto Sans KR', sans-serif;}
       .clear:after {
         display: block;
         clear: both;
